cp project/force-app/main/default/objects/Lead/fields/Channel_Partner__c.field-meta.xml
<CustomField><fullName>Channel_Partner__c</fullName><label>Channel Partner</label><referenceTo>Channel_Partner__c</referenceTo><relationshipLabel>Leads</relationshipLabel><relationshipName>Leads</relationshipName><type>Lookup</type></CustomField>