cp project/force-app/main/default/objects/Lead/fields/CP_App_ID__c.field-meta.xml
<CustomField><fullName>CP_App_ID__c</fullName><label>CP App ID</label><length>120</length><type>Text</type><externalId>true</externalId><unique>true</unique></CustomField>