cp project/force-app/main/default/objects/Lead/fields/CP_Company__c.field-meta.xml
<CustomField><fullName>CP_Company__c</fullName><label>CP Company</label><length>160</length><type>Text</type></CustomField>