cp project/force-app/main/default/objects/Lead/fields/CP_Email__c.field-meta.xml
<CustomField><fullName>CP_Email__c</fullName><label>CP Email</label><type>Email</type></CustomField>