cp project/force-app/main/default/objects/Lead/fields/Customer_Priority__c.field-meta.xml
<CustomField>
    <fullName>Customer_Priority__c</fullName>
    <label>Customer Priority</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>