cp project/force-app/main/default/objects/Lead/fields/Duplicate_Reason__c.field-meta.xml
<CustomField><fullName>Duplicate_Reason__c</fullName><label>Duplicate Reason</label><length>255</length><type>Text</type></CustomField>