cp project/force-app/main/default/objects/Lead/fields/Last_Salesforce_Sync__c.field-meta.xml
<CustomField>
    <fullName>Last_Salesforce_Sync__c</fullName>
    <label>Last Salesforce Sync</label>
    <type>DateTime</type>
</CustomField>