cp project/force-app/main/default/objects/Lead/fields/Potential_Duplicate__c.field-meta.xml
<CustomField><fullName>Potential_Duplicate__c</fullName><label>Potential Duplicate</label><type>Checkbox</type><defaultValue>false</defaultValue></CustomField>