cp project/force-app/main/default/objects/Lead/fields/Protected_Until__c.field-meta.xml
<CustomField>
    <fullName>Protected_Until__c</fullName>
    <label>Protected Until</label>
    <type>Date</type>
</CustomField>