cp project/force-app/main/default/objects/Lead/fields/Registered_By_Partner__c.field-meta.xml
<CustomField>
    <fullName>Registered_By_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Registered By Partner</label>
    <type>Checkbox</type>
</CustomField>