cp project/force-app/main/default/objects/Lead/fields/Salesforce_Sync_Error__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Sync_Error__c</fullName>
    <label>Salesforce Sync Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>