cp project/force-app/main/default/objects/Lead/validationRules/Budget_Greater_Than_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Budget_Greater_Than_Zero</fullName>
    <active>true</active>
    <errorConditionFormula>Budget__c &lt;= 0</errorConditionFormula>
    <errorMessage>Budget must be greater than zero.</errorMessage>
</ValidationRule>