cp project/force-app/main/default/objects/Lead/validationRules/CP_Lead_Email_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>CP_Lead_Email_Format</fullName>
    <active>true</active>
    <description>Validates email format for CP Email and Customer Email when provided on CP leads</description>
    <errorConditionFormula>AND(
    ISPICKVAL(LeadSource, &apos;Channel Partner&apos;),
    OR(
        AND(
            NOT(ISBLANK(CP_Email__c)),
            NOT(REGEX(CP_Email__c, &apos;^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,4}$&apos;))
        ),
        AND(
            NOT(ISBLANK(Email)),
            NOT(REGEX(Email, &apos;^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,4}$&apos;))
        )
    )
)</errorConditionFormula>
    <errorMessage>Please provide a valid email address format.</errorMessage>
</ValidationRule>