cp project/force-app/main/default/objects/Lead/validationRules/CP_Lead_Mandatory_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>CP_Lead_Mandatory_Fields</fullName>
    <active>true</active>
    <description>Validates mandatory fields for Channel Partner Leads</description>
    <errorConditionFormula>AND(
    ISPICKVAL(LeadSource, &apos;Channel Partner&apos;),
    OR(
        ISBLANK(CP_ID__c),
        ISBLANK(CP_Company__c),
        ISBLANK(CP_Email__c),
        ISBLANK(Project__c),
        ISBLANK(LastName)
    )
)</errorConditionFormula>
    <errorMessage>For Channel Partner leads, CP ID, CP Company, CP Email, Project, and Customer Name (Last Name) are required.</errorMessage>
</ValidationRule>