cp project/force-app/main/default/objects/Lead/validationRules/CP_Lead_Phone_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>CP_Lead_Phone_Format</fullName>
    <active>true</active>
    <description>Validates phone format when provided on CP leads</description>
    <errorConditionFormula>AND(
    ISPICKVAL(LeadSource, &apos;Channel Partner&apos;),
    NOT(ISBLANK(Phone)),
    NOT(REGEX(Phone, &apos;^[0-9+\\-\\s()]{7,20}$&apos;))
)</errorConditionFormula>
    <errorMessage>Please provide a valid phone number format with 7 to 20 digits/characters.</errorMessage>
</ValidationRule>