cp project/force-app/main/default/objects/Lead/validationRules/Lost_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Lost_Reason_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status, &quot;Closed - Not Converted&quot;),
    ISBLANK(TEXT(Lost_Reason__c))
)</errorConditionFormula>
    <errorMessage>Lost Reason is required when Lead Status is Lost.</errorMessage>
</ValidationRule>