cp project/force-app/main/default/objects/Lead/validationRules/Project_Required_When_Qualified.validationRule-meta.xml
<ValidationRule>
    <fullName>Project_Required_When_Qualified</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status, &quot;Qualified&quot;),
    ISBLANK(Project__c)
)</errorConditionFormula>
    <errorMessage>Please select a Project before qualifying the Lead.</errorMessage>
</ValidationRule>