cp project/force-app/main/default/objects/Lead/listViews/CP_Leads.listView-meta.xml
<ListView>
    <fullName>CP_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.PHONE</columns>
    <columns>CP_ID__c</columns>
    <columns>CP_Company__c</columns>
    <columns>Project__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>Channel Partner</value>
    </filters>
    <label>CP Leads</label>
</ListView>