cp project/force-app/main/default/objects/Lead/listViews/My_CP_Leads.listView-meta.xml
<ListView>
    <fullName>My_CP_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.PHONE</columns>
    <columns>CP_ID__c</columns>
    <columns>Project__c</columns>
    <columns>LEAD.STATUS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>Channel Partner</value>
    </filters>
    <label>My CP Leads</label>
</ListView>