cp project/force-app/main/default/objects/Lead/listViews/Potential_Duplicate_CP_Leads.listView-meta.xml
<ListView>
    <fullName>Potential_Duplicate_CP_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.PHONE</columns>
    <columns>CP_ID__c</columns>
    <columns>Duplicate_Reason__c</columns>
    <columns>Potential_Duplicate__c</columns>
    <columns>Project__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>Channel Partner</value>
    </filters>
    <filters>
        <field>Potential_Duplicate__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Potential Duplicate CP Leads</label>
</ListView>